Started adding iface for authentication via oidc

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+https://github.com/mitsuhiko/flask-oauth/archive/refs/heads/master.zip
 Django
 requests
 asyncssh
-django-oidc-auth
+openid-connect
+django_auth_oidc
+django-environ
