Moved gitpod.yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,8 @@ image: gitpod/workspace-python-3.9
 tasks:
   - init: |
       sudo apt-get update && sudo apt-get -y upgrade && sudo apt -y install openssh-server
-  - command: |
       pip3 install -r requirements.txt
+      python manage.py migrate
   - name: Server
     command: |
       python manage.py runserver 0.0.0.0:8080
